--- a/css/_mobile-header.scss
+++ b/css/_mobile-header.scss
@@ -32,7 +32,8 @@
 
     nav {
         // width: 60%;
-        margin-left: 5em;
+        margin-left: 20vw;
+        margin-top: 2.5vw;
     }
 
     .menu { 
@@ -44,8 +45,8 @@
         top: -17px;
         flex-direction: column;
         background-color: var(--bg-section);
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         z-index: 999;
         // border-radius: 10px;
         text-align: center;
@@ -55,12 +56,14 @@
 
     .menu.active {
         right: 0;
+        width: 101vw;
+        height: 105vh;
         touch-action: none; // Prevents scrolling on active menu
     }
 
 
     .menu li {
-        font-size: 3rem;
+        font-size: 10vw;
     }
 
     // nav {
@@ -106,8 +109,8 @@
         margin-left: 170px;
     }
 
-    #dark-mode-toggle {
-        top: 43px;
-        right: 13px;
-    }
+    // #dark-mode-toggle {
+    //     top: 43px;
+    //     right: 13px;
+    // }
 }
